Set enable preview in surefire.

--- a/pom.xml
+++ b/pom.xml
@@ -342,7 +342,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${version.plugin.surefire}</version>
                     <configuration>
-                        <argLine>${surefire.arguments}</argLine>
+                        <argLine>--enable-preview ${surefire.arguments}</argLine>
                         <systemPropertyVariables>
                             <net.bytebuddy.experimental>${bytebuddy.experimental}</net.bytebuddy.experimental>
                             <net.bytebuddy.test.integration>${bytebuddy.integration}</net.bytebuddy.test.integration>
