--- a/byte-buddy-maven-plugin/pom.xml
+++ b/byte-buddy-maven-plugin/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>net.bytebuddy</groupId>
         <artifactId>byte-buddy-parent</artifactId>
-        <version>1.15.0-SNAPSHOT</version>
+        <version>1.15.0</version>
     </parent>
 
     <artifactId>byte-buddy-maven-plugin</artifactId>
