--- a/byte-buddy-gradle-plugin/pom.xml
+++ b/byte-buddy-gradle-plugin/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>net.bytebuddy</groupId>
         <artifactId>byte-buddy-parent</artifactId>
-        <version>1.15.0</version>
+        <version>1.15.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>byte-buddy-gradle-plugin</artifactId>
