--- a/byte-buddy-dep/pom.xml
+++ b/byte-buddy-dep/pom.xml
@@ -358,7 +358,7 @@
             </build>
         </profile>
         <profile>
-            <id>java8MultiRelease</id>
+            <id>multi-release</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
             </activation>
@@ -370,7 +370,7 @@
                         <version>${version.plugin.compiler}</version>
                         <executions>
                             <execution>
-                                <id>java8MultiRelease</id>
+                                <id>java8-multi-release</id>
                                 <goals>
                                     <goal>compile</goal>
                                 </goals>
