Adjust life cycle to avoid compatibility check before multi-release generation.

--- a/byte-buddy-dep/pom.xml
+++ b/byte-buddy-dep/pom.xml
@@ -374,6 +374,7 @@
                                 <goals>
                                     <goal>compile</goal>
                                 </goals>
+                                <phase>prepare-package</phase>
                                 <configuration>
                                     <outputDirectory>${project.build.outputDirectory}/META-INF/versions/9</outputDirectory>
                                     <target>1.8</target>
