[release] Release new version.

--- a/byte-buddy/pom.xml
+++ b/byte-buddy/pom.xml
@@ -448,7 +448,7 @@
                                         <include>org/objectweb/asm/[a-zA-Z0-9$\.]+</include>
                                         <include>org/objectweb/asm/signature/[a-zA-Z0-9$\.]+</include>
                                         <include>org/objectweb/asm/commons/.*Remapper.*</include>
-                                        <include>org/objectweb/asm/commons/ModuleHashesAttribute[a-zA-Z0-9$\.]]*.class</include>
+                                        <include>org/objectweb/asm/commons/ModuleHashesAttribute[a-zA-Z0-9$\.]*.class</include>
                                     </includes>
                                 </configuration>
                             </execution>
