--- a/pom.xml
+++ b/pom.xml
@@ -366,6 +366,8 @@
                     <version>${version.plugin.compiler}</version>
                     <inherited>true</inherited>
                     <configuration>
+                        <source>${sourcecode.main.version}</source>
+                        <target>${bytecode.main.version}</target>
                         <testSource>${sourcecode.test.version}</testSource>
                         <testTarget>${bytecode.test.version}</testTarget>
                         <encoding>${project.build.sourceEncoding}</encoding>
