--- a/byte-buddy/pom.xml
+++ b/byte-buddy/pom.xml
@@ -263,8 +263,9 @@
                                             <shadedPattern>${shade.asm.target}</shadedPattern>
                                         </relocation>
                                         <relocation>
-                                            <pattern>${shade.asmjdkbridge.source}</pattern>
-                                            <shadedPattern>${shade.asmjdkbridge.target}</shadedPattern>
+                                            <pattern>codes/rafael/asmjdkbridge</pattern>
+                                            <shadedPattern>net/bytebuddy/jar/asmjdkbridge</shadedPattern>
+                                            <rawString>true</rawString>
                                         </relocation>
                                     </relocations>
                                     <filters>
