--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
         <pitest.target>net.bytebuddy</pitest.target>
         <nexus.url>https://s01.oss.sonatype.org</nexus.url>
         <version.asm>9.7.1</version.asm>
-        <version.asmjdkbridge>0.0.2-SNAPSHOT</version.asmjdkbridge>
+        <version.asmjdkbridge>0.0.2</version.asmjdkbridge>
         <version.jna>5.12.1</version.jna>
         <version.junit>4.13.2</version.junit>
         <version.mockito>2.28.2</version.mockito>
